--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>You're running Electron version: <br />
             <span id="version"></span>
         </h1>
+        <input type="text" name="" value="">
         <script>
             require('./renderer.js')
         </script>
