--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     </head>
     <body>
         
-        <h1>You're running Electron version: <br />
+        <h1>Save Info Dialog! <br />
             <span id="version"></span>
-        </h1>
-        <input type="text" name="" value="">
+        </h1> 
         <script>
             require('./renderer.js')
         </script>
